[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-doc-pipeline"
# Single-sourced from docpipeline.__version__ so the two cannot drift apart.
dynamic = ["version"]
description ="A multi-agent document-processing pipeline built on LangGraph: classify, extract, validate, and summarize unstructured documents through a stateful agent graph with a self-correcting retry loop."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Varun Kammadanam", email = "kammadanamsaivarun@gmail.com" }]
requires-python = ">=3.10"
keywords = ["langgraph", "agents", "multi-agent", "document-intelligence", "llm", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.1", "langchain-core>=0.2"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/saivarun161/langgraph-doc-pipeline"
Issues = "https://github.com/saivarun161/langgraph-doc-pipeline/issues"

[project.scripts]
docpipeline = "docpipeline.cli:main"

[tool.hatch.version]
path = "src/docpipeline/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/docpipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
